--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="block clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Send us a mail:</strong>emmanuelabbey2004@gmail.com</span></div>
       </li>
       <li class="one_quarter">
-        <div class="block clear"><a href="#"><i class="fas fa-clock"></i></a> <span><strong> Mon. - Sat.:</strong> 08.00am - 18.00pm</span></div>
+        <div class="block clear"><a href="https://www.facebook.com/profile.php?id=61564073903334&mibextid=LQQJ4d"><i class="fas fa-clock"></i></a> <span><strong> Mon. - Sat.:</strong> 08.00am - 18.00pm</span></div>
       </li>
       <li class="one_quarter">
         <div class="block clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong>Come visit us on facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61564073903334&mibextid=LQQJ4d"></a><a href="#">Facebook</a></span></div>
