--- a/index.html
+++ b/index.html
@@ -225,15 +225,21 @@
         </div>
         <div class="one_quarter">
           <h5 class="heading">You can also contact us directly</h5></YYh6>
-          <p class="nospace btmspace-15">You can register your company or brand with us by filling the form below</p>
-          <form action="#" method="post">
-            <fieldset>
-              <legend>Newsletter:</legend>
-              <input class="btmspace-15" type="text" value="" placeholder="Name">
-              <input class="btmspace-15" type="text" value="" placeholder="Email">
-              <button class="btn" type="submit" value="submit">Submit</button>
-            </fieldset>
-          </form>
+          <form
+  action="https://formspree.io/f/mpwavzlw"
+  method="POST"
+  enctype="multipart/form-data"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your Certificate:
+    <input type="file" name="upload">
+  </label>
+  <button type="submit">Send</button>
+</form>
         </div>
         <div class="one_quarter">
         </div>
