--- a/index.html
+++ b/index.html
@@ -234,11 +234,15 @@
     Your email:
     <input type="email" name="email">
   </label>
+<label for="Text">
+  Your Message to us:
+  <input type="text" name="email" id="">
+</label>
   <label>
     Your Certificate:
     <input type="file" name="upload">
   </label>
-  <button type="submit">Send</button>
+  <input type="submit">
 </form>
         </div>
         <div class="one_quarter">
