--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>EMXELUX</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="description" content="Your website description here">
+<meta name="keywords" content="programming, emxelux, EMXELUX">
 <link href="layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
