--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <p>EMXELUX is a company where all your Software related problem can get solved. it was founded by OLANREWAJU EMMANUEL in the year 2024
         it currently has no specific location but you can contact them on this Website, stay tuned and explore!!!
       </p>
-      <div class="one_half last"><a class="imgfirst" href="#"><img src="photomy.jpg" alt=""></a></div>
+      <div class="one_half last"><a class="imgfirst" href="#"><img src="UUUUU.jpg" alt=""></a></div>
       <footer>
         <ul class="nospace inline pushright">
           <li><a class="btn" href="#">About us</a></li>
