--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="description" content="Your website description here">
 <meta name="keywords" content="programming, emxelux, EMXELUX">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 <link href="layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
