--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
       <h6 class="heading font-x2"> EMMANUEL ABIODUN OLANREWAJU <sub>(Prince Emmanuel)</sub></h6>
       <em>CEO/Founder of EMXELUX</em>
       <blockquote>He is a young and talented guy who wrote his acting website at the age of 20. He majored in Computer Science. He is skilled in different aspects in Computer</blockquote>
+        <br> 
+      <a href= "resume.pdf" download> Download Resume </a>
     </article>
     
   </section>
