--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <em>CEO/Founder of EMXELUX</em>
       <blockquote>He is a young and talented guy who wrote his acting website at the age of 20. He majored in Computer Science. He is skilled in different aspects in Computer</blockquote>
         <br> 
-      <a href= "resume.pdf" download> Download Resume </a>
+      <a href= "resume.pdf" download class="button"> Download Resume </a>
     </article>
     
   </section>
