--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
             
     </div>
   </div>
-  
+<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="emmanuel-abiodun-336787302" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://ng.linkedin.com/in/emmanuel-abiodun-336787302?trk=profile-badge">Emmanuel Abiodun</a></div>
+                
 </div>
 <!-- End Bottom Background Image Wrapper -->
 
@@ -290,5 +291,6 @@
 <script src="layout/scripts/jquery.min.js"></script>
 <script src="layout/scripts/jquery.backtotop.js"></script>
 <script src="layout/scripts/jquery.mobilemenu.js"></script>
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 </html>
